P22: the council asks your question, and Maven's warning stops landing in the output
Two complaints from one run of ./run-council.sh, both about what the terminal
showed rather than about the library.

ThreeModelCouncil had one fixed question in a constant. It now prints the
default, reads one line from standard input and falls back to the default when
that line is empty or standard input has already ended, so the example is
interactive and `echo "..." | ./run-council.sh` scripts it. Standard input
rather than a second argument: exec:java splits -Dexec.args on whitespace,
which is already why the launcher refuses a path containing a space. The
question is read after the configuration has loaded and before the first
request, so a file that does not parse costs nobody a typed question and every
model gets the same question.

The sun.misc.Unsafe warning is not this project's: `dependency:tree` finds no
Guava in the tree, and the warning appears when running `dependency:tree`
itself, which executes no example code. It comes from the Guava that Maven
ships, and reaches the output because exec:java runs the main class inside the
Maven process. build/run-example.sh now exports
--sun-misc-unsafe-memory-access=allow, which permits the call without the
warning, for all five examples. The flag is probed rather than assumed: it does
not exist before JDK 23 and an unrecognised launcher option is fatal, while
this project's floor is Java 17.

Verified: `./run-atomic.sh 2>&1 | grep -c 'sun.misc.Unsafe'` is 0, and the same
exec:java run with MAVEN_OPTS unset gives 3; a live council run of three real
requests answered a piped question; the default path driven for free against a
deliberately invalid key. `mvn -B clean verify` green, 137 tests in core.
build/check-docs.py: 44 ADRs, 58 tracked markdown files, no problems.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HrioFakRMMgVU5sbBjMYhg